--- a/.github/workflows/codescan.yml
+++ b/.github/workflows/codescan.yml
@@ -21,20 +21,20 @@ jobs:
         if: github.event_name == 'push' 
         uses: codescan-io/codescan-scanner-action@1.5
         with: 
-          organization: va-testing
-          projectKey: hub-scanner_actions
-          codeScanUrl: https://appgov.codescan.io
-          login: squ_052ff374794698272cc6a4712bb63a86b0fc25ea
+          organization: teer
+          projectKey: lokeex-examples
+          codeScanUrl: https://vadev.codescan.io/
+          login: squ_9dcccdd50b65f767f6818a2b296bf10db9d77a3f
           generateSarifFile: true 
           failOnRedQualityGate: true 
       - name: Run Codescan On PR 
         if: github.event_name == 'pull_request' 
         uses: codescan-io/codescan-scanner-action@1.5
         with: 
-          organization: va-testing
-          projectKey: hub-scanner_actions
-          codeScanUrl: https://appgov.codescan.io
-          login: squ_052ff374794698272cc6a4712bb63a86b0fc25ea 
+          organization: teer
+          projectKey: lokeex-examples
+          codeScanUrl: https://vadev.codescan.io/
+          login: squ_9dcccdd50b65f767f6818a2b296bf10db9d77a3f 
           scanChangedFilesOnly: true 
           generateSarifFile: true 
           failOnRedQualityGate: true 
