--- a/.github/workflows/codescan.yml
+++ b/.github/workflows/codescan.yml
@@ -27,7 +27,7 @@ jobs:
           projectKey: lokeex-examples
           codeScanUrl: https://vadev.codescan.io
           login: squ_9dcccdd50b65f767f6818a2b296bf10db9d77a3f
-          generateSarifFile: true 
+          generateSarifFile: false 
           failOnRedQualityGate: true 
       - name: Run Codescan On PR 
         if: github.event_name == 'pull_request' 
@@ -38,7 +38,7 @@ jobs:
           codeScanUrl: https://vadev.codescan.io
           login: squ_9dcccdd50b65f767f6818a2b296bf10db9d77a3f
           scanChangedFilesOnly: true 
-          generateSarifFile: true 
+          generateSarifFile: false 
           failOnRedQualityGate: true 
           args: | 
             sonar.pullrequest.branch=${{github.head_ref}} 
